--- a/view/admin/edit/edit_head_begin.html
+++ b/view/admin/edit/edit_head_begin.html
@@ -9,9 +9,9 @@
     <meta name="author" content="RickoNoNo3,RickoNoNo3@163.com">
     <meta name="copyright" content="RickoNoNo3">
     <title>Edit Inner Page</title>
-    <script src="/js/jquery-3.4.1.min.js"></script>
-    <script src="/js/blogPage.js"></script>
-    <link href="/css/material-icons.css" rel="stylesheet">
+    <script src="{:config('blog.cdn')}js/jquery-3.4.1.min.js"></script>
+    <script src="{:config('blog.cdn')}js/blogPage.js"></script>
+    <link href="{:config('blog.cdn')}css/material-icons.css" rel="stylesheet">
     <link href="{:config('blog.style')}" rel="stylesheet">
     {if $isMobile}
     <link href="{:config('blog.style_mobile')}" rel="stylesheet">
