--- a/view/admin/index.html
+++ b/view/admin/index.html
@@ -9,8 +9,8 @@
     <meta name="author" content="RickoNoNo3,RickoNoNo3@163.com">
     <meta name="copyright" content="RickoNoNo3">
     <title>{$title}(管理员)</title>
-    <script src="/js/jquery-3.4.1.min.js"></script>
-    <link href="/css/material-icons.css" rel="stylesheet">
+    <script src="{:config('blog.cdn')}js/jquery-3.4.1.min.js"></script>
+    <link href="{:config('blog.cdn')}css/material-icons.css" rel="stylesheet">
     <link href="{:config('blog.style')}" rel="stylesheet">
     {if $isMobile}
     <link href="{:config('blog.style_mobile')}" rel="stylesheet">
