--- a/view/blog/article.html
+++ b/view/blog/article.html
@@ -10,7 +10,7 @@ $article 文章对象
 {include file='global/body_begin'}
 <div class="mybox" id="box">
 	<article class="mycontent" id="content">
-		<!--<div id="infomation">
+		<!--<div id="information">
 			创建时间: {:app\\helper\\DateTimeHelper::timeTrans($article->createdT)} &nbsp;
 			修改时间: {:app\\helper\\DateTimeHelper::timeTrans($article->modifiedT)}
 		</div>-->
