--- a/view/global/body_begin.html
+++ b/view/global/body_begin.html
@@ -11,7 +11,7 @@
 			</ul>
 		</div>
 		<div class="mynavicon">
-			<a href="https://www.cnblogs.com/rickonono3" style="opacity: 0;"></a>
+			<a title="R崽的博客 - 博客园" href="https://www.cnblogs.com/rickonono3" style="opacity: 0;"></a>
 		</div>
 	</div>
 	<script>
