--- a/view/global/script_begin.html
+++ b/view/global/script_begin.html
@@ -13,8 +13,8 @@
     }
 </script>
 {if $info.isSpecial}
-<script src="/js/conSpecial.js"></script>
+<script src="{:config('blog.cdn')}js/conSpecial.js"></script>
 {/if}
-<script src="/js/conBg.js"></script>
-<script src="/js/conNavLoc.js"></script>
-<script src="/js/conLogin.js"></script>
+<script src="{:config('blog.cdn')}js/conBg.js"></script>
+<script src="{:config('blog.cdn')}js/conNavLoc.js"></script>
+<script src="{:config('blog.cdn')}js/conLogin.js"></script>
